Added tab navigation, fixed footer, improved styling and content of nav (more suitable for Stuttgart Media University)

--- a/public/footer.html
+++ b/public/footer.html
@@ -1,5 +1,7 @@
-<footer class="d-flex justify-content-around bg-light">
-    <a href="/legal-disclosure">Legal Disclosure</a>
-    <span>Copyright © 2020 Stuttgart Media University</span>
-    <a href="/privacy-policy">Privacy Policy</a>
+<footer class="bg-light mt-5">
+    <div class="bla">
+        <div class="my-2">Copyright © 2020 Stuttgart Media University</div>
+        <div><a class="my-2" href="/legal-disclosure">Legal Disclosure</a></div>
+        <div><a class="my-2" href="/privacy-policy">Privacy Policy</a></div>
+    </div>
 </footer>
