--- a/public/nav.html
+++ b/public/nav.html
@@ -1,4 +1,4 @@
-<nav id="nav-placeholder" class="navbar navbar-expand-lg navbar-light bg-light sticky-top justify-content-between">
+<nav id="nav-placeholder" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top justify-content-between">
     <a class="navbar-brand" href="/">
         <img src="assets/HdM_Logo_NoText.png" width="42" class="logo-picture d-inline-block align-top" alt="">
         <span class="logo-text">Study Administration Portal</span>
