--- a/public/nav.html
+++ b/public/nav.html
@@ -1,7 +1,7 @@
-<nav id="nav-placeholder" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top justify-content-between">
+<nav id="nav-placeholder" class="navbar navbar-expand-lg navbar-dark nav-bg sticky-top justify-content-between">
     <a class="navbar-brand" href="/">
-        <img src="assets/HdM_Logo_NoText.png" width="42" class="logo-picture d-inline-block align-top" alt="">
-        <span class="logo-text">Study Administration Portal</span>
+        <img src="assets/HdM_Logo_White.png" width="53" class="logo-picture d-inline-block align-top" alt="">
+        <span class="logo-text">Study Administration<span class="logo-text-hide-mobile"> Portal</span></span>
     </a>
     <button class="navbar-toggler border-none" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent"
