--- a/public/index.html
+++ b/public/index.html
@@ -25,17 +25,17 @@
 <!-- Header -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top justify-content-center">
     <div class="navbar-brand">
-        <img src="assets/HdM_Logo_NoText.png" width="42" class="logo-picture d-inline-block align-top" alt="Logo">
-        <span class="logo-text">Study Administration Portal</span>
+        <span class="logo-text">Study Administration<span class="logo-text-hide-mobile"> Portal</span></span>
     </div>
 </nav>
 
 
 <!-- Begin page content -->
-<main role="main" class="container main-login my-5">
+<main role="main" class="container main-login my-4">
     <form action="#">
         <div class="text-center mb-4">
             <h1 class="h3 mb-3 font-weight-normal">Welcome Lisa!</h1>
+            <img src="assets/HdM_Logo_White.png" width="66" class="d-inline-block align-top mb-3" alt="Logo">
             <p>This is the study administration portal of the Stuttgart Media University for lecturers, students, and
                 employees.</p>
             <p>Please enter your credentials as follows to login to the portal.</p>
@@ -60,7 +60,7 @@
             </label>
         </div>
 
-        <a class="mt-5 mb-3" href="/reset-credentials">Forgot your username or password?</a>
+        <a class="mt-3 mb-1" href="/reset-credentials">Forgot your username or password?</a>
     </form>
 </main>
 
