--- a/public/pages/exams.html
+++ b/public/pages/exams.html
@@ -16,7 +16,7 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
     <link rel="stylesheet" type="text/css" href="/scripts/bootstrap/dist/css/bootstrap.css">
-
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 </head>
 
 <!-- BODY -->
@@ -165,7 +165,263 @@
                 <div id="modal-enroll-courses-placeholder"></div>
             </div>
 
-            <!-- Table -->
+            <!-- Table: Mandatory Courses -->
+            <div class="table-responsive">
+                <table class="table">
+                    <thead class="thead-dark">
+                    <tr>
+                        <th>Status</th>
+                        <th>Name</th>
+                        <th>ID</th>
+                        <th>ECTS</th>
+                        <th>Lecturer</th>
+                        <th>Area</th>
+                        <th>Exam Type</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <!-- Table: Internship -->
+            <div class="table-responsive">
+                <table class="table">
+                    <thead class="thead-dark">
+                    <tr>
+                        <th>Status</th>
+                        <th>Name</th>
+                        <th>ID</th>
+                        <th>ECTS</th>
+                        <th>Lecturer</th>
+                        <th>Area</th>
+                        <th>Exam Type</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <!-- Table: Thesis -->
+            <div class="table-responsive">
+                <table class="table">
+                    <thead class="thead-dark">
+                    <tr>
+                        <th>Status</th>
+                        <th>Name</th>
+                        <th>ID</th>
+                        <th>ECTS</th>
+                        <th>Lecturer</th>
+                        <th>Area</th>
+                        <th>Exam Type</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <!-- Table: Specializations -->
+            <div class="table-responsive">
+                <table class="table">
+                    <thead class="thead-dark">
+                    <tr>
+                        <th>Status</th>
+                        <th>Name</th>
+                        <th>ID</th>
+                        <th>ECTS</th>
+                        <th>Lecturer</th>
+                        <th>Area</th>
+                        <th>Exam Type</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox"></td>
+                        <td>App Design</td>
+                        <td>53423</td>
+                        <td>5</td>
+                        <td>Prof. Ralph Tille</td>
+                        <td>Project</td>
+                        <td>PA</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <!-- Table: Projects -->
             <div class="table-responsive">
                 <table class="table">
                     <thead class="thead-dark">
